# Fluxer-Rust

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: bot.rs  bottest.rs  ping.rs  vctest.rs  voice.rs
src/: client.rs  error.rs  event.rs  http.rs  lib.rs  model.rs
src/client/: mod.rs
src/model/: mod.rs  voice.rs
src/voice/: mod.rs
