[package]
name = "fluxer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
futures = "0.3"
log = "0.4"
url = "2.4"
async-trait = "0.1"
thiserror = "1.0"