[package]
name = "fluxer"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
futures = "0.3.32"
livekit = { version = "0.7.32", features = ["rustls-tls-native-roots"] }
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
tokio-util = { version = "0.7.18", features = ["io"] }
url = "2.5.8"
rustls = { version = "0.23", features = ["ring"] }
md5 = "0.7"
rand = "0.10.0"